crates/composition/tests/snapshots/mail__confirm_html.snap
---
source: crates/composition/tests/mail.rs
expression: rendered.html
---
<!doctype html><html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/xhtml"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="x-apple-disable-message-reformatting"><meta name="format-detection" content="telephone=no,address=no,email=no,date=no,url=no"><meta name="color-scheme" content="light dark"><meta name="supported-color-schemes" content="light dark"><title>Confirm your spot on the SupportGenius waitlist</title><style>body{margin:0!important;padding:0!important;width:100%!important}a[x-apple-data-detectors]{color:inherit!important;text-decoration:none!important}@media (max-width:620px){.cf-outer{padding:20px 12px!important}.cf-card{padding:28px 20px!important}.cf-h1{font-size:22px!important;line-height:28px!important}}@media (max-width:480px){.cf-fact-l{display:block!important;width:auto!important;padding:0 0 2px!important}.cf-fact-v{display:block!important;padding:0 0 12px!important}}@media (prefers-color-scheme:dark){.cf-bg{background:#0a0c10!important}.cf-card{background:#0f1216!important;border-color:#272a2e!important}.cf-ink{color:#e7eaef!important}.cf-text{color:#aeb6c3!important}.cf-mut{color:#9aa3b2!important}.cf-code{background:#171b21!important;color:#e7eaef!important;border-color:#272a2e!important}.cf-rule{border-color:#272a2e!important}.cf-btn{background:#5b9dff!important}.cf-btn-a{color:#0a0c10!important}.cf-link{color:#5b9dff!important}}</style>
</head>
<body class="cf-bg" style="margin:0;padding:0;background:#f4f6f9;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%"><div style="display:none;max-height:0;max-width:0;overflow:hidden;opacity:0;mso-hide:all;font-size:1px;line-height:1px;color:#f4f6f9">Confirm your address to hold your place on the SupportGenius waitlist.&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;</div>
<table role="presentation" class="cf-bg" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#f4f6f9;border-collapse:collapse"><tr>
<td class="cf-outer" align="center" style="padding:32px 16px"><!--[if mso]><table role="presentation" width="600" cellpadding="0" cellspacing="0" border="0"><tr>
<td><![endif]--><table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:600px;border-collapse:separate"><tr>
<td style="padding:0 4px 20px"><a href="https://supportgeni.us/" style="text-decoration:none;color:#0a0c10"><table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
<td width="32" height="32" style="width:32px;height:32px;"><img src="https://supportgeni.us/assets/email/logo-64.png" width="32" height="32" alt="SupportGenius" style="display:block;width:32px;height:32px;border:0;outline:none;text-decoration:none;color:#0a0c10;font-family:Geist,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:12px;line-height:32px;font-weight:700"></td><td class="cf-ink" style="padding-left:10px;font-family:Geist,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:20px;line-height:32px;font-weight:700;letter-spacing:-0.5px;color:#0a0c10">SupportGenius</td></tr>
</table></a></td></tr>
<tr>
<td class="cf-card" bgcolor="#ffffff" style="background:#ffffff;border:1px solid #e1e5ec;border-radius:14px;padding:36px 40px;font-family:Geist,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif"><h1 class="cf-h1 cf-ink" style="margin:0 0 16px;font-family:Geist,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:26px;line-height:32px;font-weight:700;letter-spacing:-0.4px;color:#0a0c10">Hold your spot</h1>
<p class="cf-text" style="margin:0 0 20px;font-family:Geist,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:16px;line-height:24px;color:#2b313b">SupportGenius is admitting members in join order. Confirm your address to hold your place on the waitlist.</p>
<table role="presentation" cellpadding="0" cellspacing="0" border="0" style="margin:4px 0 24px"><tr>
<td class="cf-btn" bgcolor="#5b9dff" style="border-radius:10px;background:#5b9dff"><a class="cf-btn-a" href="https://supportgeni.us/v1/waitlist/confirm?token=abc123" target="_blank" rel="noopener" style="display:inline-block;padding:14px 24px;font-family:Geist,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:16px;line-height:20px;font-weight:700;color:#0a0c10;text-decoration:none;border-radius:10px">Confirm my spot</a></td></tr>
</table><p class="cf-mut" style="margin:0 0 6px;font-family:Geist,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:14px;line-height:20px;color:#5b6472">If the button does not work, open this link:</p>
<p style="margin:0 0 24px;font-family:'Geist Mono',ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;font-size:13px;line-height:20px;word-break:break-all;overflow-wrap:anywhere"><a class="cf-link" href="https://supportgeni.us/v1/waitlist/confirm?token=abc123" style="color:#1f5fd1;text-decoration:underline">https://supportgeni.us/v1/waitlist/confirm?token=abc123</a></p>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0"><tr>
<td class="cf-rule" style="border-top:1px solid #e1e5ec;padding-top:20px"><p class="cf-mut" style="margin:0 0 8px;font-family:Geist,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:14px;line-height:21px;color:#5b6472">If you did not join this waitlist, ignore this email: nothing happens until the link is opened.</p>
</td></tr>
</table></td></tr>
<tr>
<td class="cf-mut" style="padding:24px 8px 0;font-family:Geist,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:13px;line-height:20px;color:#5b6472"><p style="margin:0 0 6px">Sent to ada@example.com because this address was entered on the SupportGenius waitlist.</p>
<p style="margin:0">SupportGenius &middot; <a class="cf-mut" href="https://supportgeni.us/" style="color:#5b6472;text-decoration:underline">supportgeni.us</a> &middot; <a class="cf-mut" href="mailto:hello@supportgeni.us" style="color:#5b6472;text-decoration:underline">hello@supportgeni.us</a></p>
</td></tr>
</table><!--[if mso]></td></tr>
</table><![endif]--></td></tr>
</table></body></html>
