crates/composition/tests/snapshots/mail__confirm_subject.snap
---
source: crates/composition/tests/mail.rs
expression: rendered.subject
---
Confirm your spot on the SupportGenius waitlist
