crates/composition/tests/snapshots/mail__confirmed_subject.snap
---
source: crates/composition/tests/mail.rs
expression: rendered.subject
---
You are #42 on the SupportGenius waitlist
